[gd_scene load_steps=33 format=3 uid="uid://dxrcv68kl58yu"]

[ext_resource type="Script" uid="uid://c6x5m3h3cyaso" path="res://scripts/enemies/grossgull.gd" id="1_pbag0"]
[ext_resource type="Texture2D" uid="uid://blhormdsvxe3i" path="res://art/seagull/seagull_glow_frame0008.png" id="2_ytjjh"]
[ext_resource type="Texture2D" uid="uid://blsvsbiklm0fd" path="res://art/seagull/seagull_glow_frame0009.png" id="3_ovxe6"]
[ext_resource type="Texture2D" uid="uid://bcw5jksvh1xg3" path="res://art/seagull/seagull_glow_frame0010.png" id="4_rqvrb"]
[ext_resource type="Texture2D" uid="uid://cblykhreuqsre" path="res://art/seagull/seagull_glow_frame0011.png" id="5_ssi6b"]
[ext_resource type="Texture2D" uid="uid://de2uo4q344fdu" path="res://art/seagull/seagull_glow_frame0012.png" id="6_0qed4"]
[ext_resource type="Texture2D" uid="uid://bb0hx4bq31bjk" path="res://art/seagull/seagull_glow_frame0013.png" id="7_raqb8"]
[ext_resource type="Texture2D" uid="uid://ds7bqvg5n4ol5" path="res://art/seagull/seagull_glow_frame0014.png" id="8_63r22"]
[ext_resource type="Texture2D" uid="uid://b0i4oq3uswvl6" path="res://art/seagull/seagull_glow_frame0015.png" id="9_jy223"]
[ext_resource type="AudioStream" uid="uid://bh85n0rk2pt0q" path="res://music/opengameart.org/users/subspaceaudio/sfx_exp_short_soft6.wav" id="9_mce4c"]
[ext_resource type="Texture2D" uid="uid://nnd11q05nbxc" path="res://art/seagull/seagull_glow_frame0016.png" id="10_6yjrq"]
[ext_resource type="Texture2D" uid="uid://c8ljovm1xlibo" path="res://art/seagull/seagull_glow_frame0017.png" id="11_u8sqy"]
[ext_resource type="Texture2D" uid="uid://cll0xgb3xskl5" path="res://art/seagull/gross_seagull_frame0008.png" id="12_g5b42"]
[ext_resource type="Texture2D" uid="uid://cfjtg0sj8418k" path="res://art/seagull/seagull_glow_frame0007.png" id="12_ssi6b"]
[ext_resource type="Texture2D" uid="uid://b5dtq0mpuhlf7" path="res://art/seagull/gross_seagull_frame0009.png" id="13_s3pe2"]
[ext_resource type="Texture2D" uid="uid://wdifbo47tv5a" path="res://art/seagull/gross_seagull_frame0010.png" id="14_y6a54"]
[ext_resource type="Texture2D" uid="uid://bqilx1uuiv80h" path="res://art/seagull/gross_seagull_frame0011.png" id="15_m2l06"]
[ext_resource type="Texture2D" uid="uid://b5e57rpk5k2e2" path="res://art/seagull/gross_seagull_frame0012.png" id="16_3jb87"]
[ext_resource type="Texture2D" uid="uid://b0aqrxfkunbdh" path="res://art/seagull/gross_seagull_frame0013.png" id="17_f57r4"]
[ext_resource type="Texture2D" uid="uid://divljdvxr1v24" path="res://art/seagull/gross_seagull_frame0014.png" id="18_hyg8r"]
[ext_resource type="Texture2D" uid="uid://l3qt54ighes4" path="res://art/seagull/gross_seagull_frame0015.png" id="19_ajuta"]
[ext_resource type="Texture2D" uid="uid://ccb82l0iwmb2i" path="res://art/seagull/gross_seagull_frame0016.png" id="20_ubsf8"]
[ext_resource type="Texture2D" uid="uid://bhvb4w5bmcd4b" path="res://art/seagull/gross_seagull_frame0017.png" id="21_hrvyh"]
[ext_resource type="AudioStream" uid="uid://c4lbu2nbcqana" path="res://music/kronbits.itch.io/Retro Crow 01.wav" id="22_pbag0"]
[ext_resource type="Texture2D" uid="uid://df5gjrypoomuu" path="res://art/seagull/gross_seagull_frame0007.png" id="24_raqb8"]
[ext_resource type="AudioStream" uid="uid://dcdntjcbgscix" path="res://music/opengameart.org/users/subspaceaudio/sfx_sounds_damage3.wav" id="26_ovxe6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4cv0g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ytjjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_ovxe6")
}, {
"duration": 1.0,
"texture": ExtResource("4_rqvrb")
}, {
"duration": 1.0,
"texture": ExtResource("5_ssi6b")
}, {
"duration": 1.0,
"texture": ExtResource("6_0qed4")
}, {
"duration": 1.0,
"texture": ExtResource("7_raqb8")
}, {
"duration": 1.0,
"texture": ExtResource("8_63r22")
}, {
"duration": 1.0,
"texture": ExtResource("9_jy223")
}, {
"duration": 1.0,
"texture": ExtResource("10_6yjrq")
}, {
"duration": 1.0,
"texture": ExtResource("11_u8sqy")
}],
"loop": true,
"name": &"cruise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ssi6b")
}],
"loop": false,
"name": &"swoop",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ywsy2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_g5b42")
}, {
"duration": 1.0,
"texture": ExtResource("13_s3pe2")
}, {
"duration": 1.0,
"texture": ExtResource("14_y6a54")
}, {
"duration": 1.0,
"texture": ExtResource("15_m2l06")
}, {
"duration": 1.0,
"texture": ExtResource("16_3jb87")
}, {
"duration": 1.0,
"texture": ExtResource("17_f57r4")
}, {
"duration": 1.0,
"texture": ExtResource("18_hyg8r")
}, {
"duration": 1.0,
"texture": ExtResource("19_ajuta")
}, {
"duration": 1.0,
"texture": ExtResource("20_ubsf8")
}, {
"duration": 1.0,
"texture": ExtResource("21_hrvyh")
}],
"loop": true,
"name": &"cruise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_raqb8")
}],
"loop": false,
"name": &"swoop",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovxe6"]
size = Vector2(143, 62)

[sub_resource type="Animation" id="Animation_45h6e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("death_noise:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4cv0g"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("death_noise:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i47tk"]
_data = {
&"RESET": SubResource("Animation_45h6e"),
&"die": SubResource("Animation_4cv0g")
}

[node name="GhostGull" type="Area2D"]
script = ExtResource("1_pbag0")

[node name="glow" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4cv0g")
animation = &"cruise"
autoplay = "cruise"
offset = Vector2(0, -95.385)

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ywsy2")
animation = &"cruise"
autoplay = "cruise"
offset = Vector2(0, -95.385)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.5, -32)
shape = SubResource("RectangleShape2D_ovxe6")

[node name="swoop_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_pbag0")
max_polyphony = 10
bus = &"SFX"

[node name="death_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mce4c")
volume_db = -15.112
pitch_scale = 1.17
bus = &"SFX"

[node name="null_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_ovxe6")
volume_db = -13.087
pitch_scale = 0.23
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i47tk")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
